pattern/ecs-service-extensions-load-balancer-cdk/files/cdk.out/ECSStack.template.json
{
  "Resources": {
    "productionenvironmentvpcAEB47DF7": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/Resource"
      }
    },
    "productionenvironmentvpcPublicSubnet1Subnet8D92C089": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/Subnet"
      }
    },
    "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/RouteTable"
      }
    },
    "productionenvironmentvpcPublicSubnet1RouteTableAssociationA8117374": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
        },
        "SubnetId": {
          "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "productionenvironmentvpcPublicSubnet1DefaultRoute524C894D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPublicSubnet1RouteTable6E9ABC21"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "productionenvironmentvpcIGWE7C39890"
        }
      },
      "DependsOn": [
        "productionenvironmentvpcVPCGW1B428D07"
      ],
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "productionenvironmentvpcPublicSubnet1EIP54BA88DB": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/EIP"
      }
    },
    "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "productionenvironmentvpcPublicSubnet1EIP54BA88DB",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet1/NATGateway"
      }
    },
    "productionenvironmentvpcPublicSubnet2Subnet298E6C31": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/Subnet"
      }
    },
    "productionenvironmentvpcPublicSubnet2RouteTable842A68D7": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/RouteTable"
      }
    },
    "productionenvironmentvpcPublicSubnet2RouteTableAssociation0A7549F3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
        },
        "SubnetId": {
          "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "productionenvironmentvpcPublicSubnet2DefaultRoute92CD697D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPublicSubnet2RouteTable842A68D7"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "productionenvironmentvpcIGWE7C39890"
        }
      },
      "DependsOn": [
        "productionenvironmentvpcVPCGW1B428D07"
      ],
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "productionenvironmentvpcPublicSubnet2EIP14CA46AA": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/EIP"
      }
    },
    "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "productionenvironmentvpcPublicSubnet2EIP14CA46AA",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PublicSubnet2/NATGateway"
      }
    },
    "productionenvironmentvpcPrivateSubnet1Subnet53F632E6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet1/Subnet"
      }
    },
    "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet1/RouteTable"
      }
    },
    "productionenvironmentvpcPrivateSubnet1RouteTableAssociation8BA32463": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
        },
        "SubnetId": {
          "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "productionenvironmentvpcPrivateSubnet1DefaultRouteFBB3DE6C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPrivateSubnet1RouteTable2C6DFF0C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "productionenvironmentvpcPublicSubnet1NATGateway6075E4CA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "productionenvironmentvpcPrivateSubnet2Subnet756FB93C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet2/Subnet"
      }
    },
    "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet2/RouteTable"
      }
    },
    "productionenvironmentvpcPrivateSubnet2RouteTableAssociation09188261": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
        },
        "SubnetId": {
          "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "productionenvironmentvpcPrivateSubnet2DefaultRoute5F9AB6C1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "productionenvironmentvpcPrivateSubnet2RouteTable2F77D0D2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "productionenvironmentvpcPublicSubnet2NATGatewayE1850FCC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "productionenvironmentvpcIGWE7C39890": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ECSStack/production-environment-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/IGW"
      }
    },
    "productionenvironmentvpcVPCGW1B428D07": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        },
        "InternetGatewayId": {
          "Ref": "productionenvironmentvpcIGWE7C39890"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-vpc/VPCGW"
      }
    },
    "productionenvironmentclusterC6599D2D": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "ECSStack/production-environment-cluster/Resource"
      }
    },
    "nameloadbalancer864179C4": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "nameloadbalancerSecurityGroupF4F5AC17",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "productionenvironmentvpcPublicSubnet1Subnet8D92C089"
          },
          {
            "Ref": "productionenvironmentvpcPublicSubnet2Subnet298E6C31"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "productionenvironmentvpcPublicSubnet1DefaultRoute524C894D",
        "productionenvironmentvpcPublicSubnet2DefaultRoute92CD697D"
      ],
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-load-balancer/Resource"
      }
    },
    "nameloadbalancerSecurityGroupF4F5AC17": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB ECSStacknameloadbalancerFEF48F2E",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-load-balancer/SecurityGroup/Resource"
      }
    },
    "nameloadbalancerSecurityGrouptoECSStacknameserviceSecurityGroup14F9F32880A1A6797A": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "nameloadbalancerSecurityGroupF4F5AC17",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "nameserviceSecurityGroup33F4662C",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-load-balancer/SecurityGroup/to ECSStacknameserviceSecurityGroup14F9F328:80"
      }
    },
    "nameloadbalancernamelistenerEDB37B51": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "nameloadbalancernamelistenernameGroup65A036FB"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "nameloadbalancer864179C4"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-load-balancer/name-listener/Resource"
      }
    },
    "nameloadbalancernamelistenernameGroup65A036FB": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "10"
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false"
          }
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-load-balancer/name-listener/nameGroup/Resource"
      }
    },
    "nametaskdefinitionTaskRole50FE844E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-task-definition/TaskRole/Resource"
      }
    },
    "nametaskdefinition690762BB": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Cpu": 1024,
            "Environment": [
              {
                "Name": "PORT",
                "Value": "80"
              }
            ],
            "Essential": true,
            "Image": "nathanpeck/name",
            "Memory": 2048,
            "Name": "app",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ],
            "Ulimits": [
              {
                "HardLimit": 1024000,
                "Name": "nofile",
                "SoftLimit": 1024000
              }
            ]
          }
        ],
        "Cpu": "1024",
        "Family": "ECSStacknametaskdefinitionCB1493C3",
        "Memory": "2048",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "EC2",
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "nametaskdefinitionTaskRole50FE844E",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-task-definition/Resource"
      }
    },
    "nameserviceService8015C8D6": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "productionenvironmentclusterC6599D2D"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "app",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "nameloadbalancernamelistenernameGroup65A036FB"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "nameserviceSecurityGroup33F4662C",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "productionenvironmentvpcPrivateSubnet1Subnet53F632E6"
              },
              {
                "Ref": "productionenvironmentvpcPrivateSubnet2Subnet756FB93C"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "nametaskdefinition690762BB"
        }
      },
      "DependsOn": [
        "nameloadbalancernamelistenernameGroup65A036FB",
        "nameloadbalancernamelistenerEDB37B51"
      ],
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-service/Service"
      }
    },
    "nameserviceSecurityGroup33F4662C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ECSStack/name-service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "productionenvironmentvpcAEB47DF7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-service/SecurityGroup/Resource"
      }
    },
    "nameserviceSecurityGroupfromECSStacknameloadbalancerSecurityGroup778463A4806A9DCED1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "nameserviceSecurityGroup33F4662C",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "nameloadbalancerSecurityGroupF4F5AC17",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/name-service/SecurityGroup/from ECSStacknameloadbalancerSecurityGroup778463A4:80"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/CMAz9LbungXGYtNsYYwhp2hAgrlOaGmYoTpWPMlT1v89t6Og2aSc/P1vJ87NHsrq9l8MbdXKJzg5JjqmsVl7pg2DqvQI9ktWm0GKypc1iIhYhzVGvQkrgG+6KliZ4WKs0hyt/5cbOGY3Ko6Hv5gZM54smvCo/Ux5O6iwWFkuG14fn5MEy7hqikks29qz14wjkxQp0sOjPM2tC0Wr4l5juLDj3h55Ty9cCtJPVJA+Of2+6OrhW7vAEWyTshvnNGPIKCWyPe1Z21wwFtkQdDYqQ/8mV86hzo7JU5Yo00q5k08dFwU63jr1w7bGtRSk/8n4fskK69HS4V1+zCvaxs6OX1gLVUVZLE7fXxLoWS3Am2Kj3LfgixEX3WJ41ayesxZCv6KE7I9154AbsY+LisAl8sibH7WztlEq0hi6ri2bUgkwGcu8G5e2dbA9z7xATG [...]
      },
      "Metadata": {
        "aws:cdk:path": "ECSStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Outputs": {
    "nameloadbalancerdnsoutput": {
      "Value": {
        "Fn::GetAtt": [
          "nameloadbalancer864179C4",
          "DNSName"
        ]
      }
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
